--- a/res/layout-sw600dp/whats_new_activity.xml
+++ b/res/layout-sw600dp/whats_new_activity.xml
@@ -10,7 +10,7 @@
         android:id="@+id/contentPanel"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="89">
+        android:layout_weight="90">
     </android.support.v4.view.ViewPager>
 
     <LinearLayout
@@ -19,7 +19,7 @@
         android:layout_marginLeft="@dimen/standard_margin"
         android:layout_marginRight="@dimen/standard_margin"
         android:layout_marginBottom="@dimen/standard_margin"
-        android:layout_weight="11"
+        android:layout_weight="10"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -31,7 +31,8 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_weight="1"
             android:text="@string/welcome_feature_skip_button"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
         <com.owncloud.android.ui.whatsnew.ProgressIndicator
             android:id="@+id/progressIndicator"
