--- a/res/layout/whats_new_activity.xml
+++ b/res/layout/whats_new_activity.xml
@@ -10,51 +10,51 @@
         android:id="@+id/contentPanel"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="89">
+        android:layout_weight="90">
     </android.support.v4.view.ViewPager>
 
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="@dimen/standard_margin"
-        android:layout_marginRight="@dimen/standard_margin"
+        android:layout_weight="10"
+        android:weightSum="3"
         android:layout_marginBottom="@dimen/standard_margin"
-        android:layout_weight="11"
-        android:orientation="horizontal"
-        android:weightSum="3">
+        android:layout_marginLeft="@dimen/standard_margin"
+        android:layout_marginRight="@dimen/standard_margin">
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/skip"
             style="@style/Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
             android:layout_weight="1"
-            android:text="@string/welcome_feature_skip_button"
-            android:textColor="@color/white" />
+            android:text="Skip"
+            android:textColor="@color/white"
+            android:layout_gravity="center_vertical|center_horizontal"/>
 
         <com.owncloud.android.ui.whatsnew.ProgressIndicator
             android:id="@+id/progressIndicator"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical|center_horizontal">
+        </com.owncloud.android.ui.whatsnew.ProgressIndicator>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
-            android:orientation="vertical">
-
+            android:orientation="vertical"
+            android:layout_gravity="center">
             <ImageButton
                 android:id="@+id/forward"
-                style="@style/Button.Borderless"
+                android:src="@drawable/ic_arrow_forward"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="@dimen/standard_padding"
-                android:src="@drawable/ic_arrow_forward" />
+                style="@style/Button.Borderless"/>
         </LinearLayout>
     </LinearLayout>
 
