--- a/owncloudApp/src/main/res/values/setup.xml
+++ b/owncloudApp/src/main/res/values/setup.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- App name  and other strings-->
     <string name="app_name" formatted="false">ownCloud</string>
-    <string name="account_type" formatted="false">owncloud</string>    <!-- better if was a domain name; but changing it now would require migrate accounts when the app is updated -->
-    <string name="authority" formatted="false">org.owncloud</string>
+    <string name="account_type" formatted="false">owncloud</string>	<!-- better if was a domain name; but changing it now would require migrate accounts when the app is updated -->
+    <string name="authority" formatted="false" tools:ignore="ExtraTranslation">org.owncloud</string>
     <string name="document_provider_authority" formatted="false">org.owncloud.documents</string>
     <string name="file_provider_authority" formatted="false">org.owncloud.files</string>
     <string name="search_suggest_authority" formatted="false">org.owncloud.search.users_and_groups</string>
@@ -17,12 +17,12 @@
     <string name="user_agent">Mozilla/5.0 (Android) ownCloud-android/%1$s</string>
 
     <!-- URLs and flags related -->
-    <string name="server_url" formatted="false"></string>
+    <string name="server_url" formatted="false" />
     <bool name="show_server_url_input">true</bool>
     <bool name="show_welcome_link">true</bool>
     <string name="welcome_link_url" formatted="false">"https://owncloud.com/mobile/new"</string>
-    <string name="share_api_link" formatted="false"></string>
-
+    <string name="share_api_link" formatted="false" />
+    
     <!-- Flags to setup the authentication methods available in the app -->
     <string name="auth_method_saml_web_sso" formatted="false">off</string>
 
@@ -69,14 +69,14 @@
     <bool name="wizard_enabled">true</bool>
     <string name="url_privacy_policy" formatted="false">https://owncloud.com/privacy-legal/</string>
     <string name="url_help" formatted="false">https://owncloud.com/mobile/help</string>
-    <string name="url_imprint" formatted="false"></string>
+    <string name="url_imprint" formatted="false" />
     <string name="mail_recommend" formatted="false">"mailto:"</string>
     <string name="mail_feedback" formatted="false">"mailto:android-app@owncloud.com"</string>
     <string name="url_app_download" formatted="false">"https://play.google.com/store/apps/details?id=com.owncloud.android"</string>
     <string name="url_sync_calendar_contacts">"https://play.google.com/store/apps/details?id=at.bitfire.davdroid"</string>
 
     <!--Destination mail for sending log files -->
-    <string name="mail_logger" formatted="false"></string>
+    <string name="mail_logger" formatted="false" />
 
     <!-- OAuth2 -->
 
