--- a/owncloudApp/src/main/res/xml/preferences.xml
+++ b/owncloudApp/src/main/res/xml/preferences.xml
@@ -61,11 +61,15 @@
             android:key="set_pincode"
             android:title="@string/prefs_passcode" />
         <android.preference.CheckBoxPreference
-            android:title="@string/prefs_pattern"
-            android:key="set_pattern" />
+            android:key="set_pattern"
+            android:title="@string/prefs_pattern" />
         <android.preference.CheckBoxPreference
             android:key="set_fingerprint"
             android:title="@string/prefs_fingerprint" />
+        <android.preference.CheckBoxPreference
+            android:key="touches_with_other_visible_windows"
+            android:summary="@string/prefs_touches_with_other_visible_windows_summary"
+            android:title="@string/prefs_touches_with_other_visible_windows" />
     </PreferenceCategory>
 
     <PreferenceCategory
