--- a/owncloudApp/src/main/res/layout/activity_manage_space.xml
+++ b/owncloudApp/src/main/res/layout/activity_manage_space.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ownCloud Android client application
 
-  Copyright (C) 2016 ownCloud GmbH.
+  Copyright (C) 2019 ownCloud GmbH.
 
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License version 2,
@@ -16,34 +15,31 @@
   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/manage_space_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:filterTouchesWhenObscured="true"
-    >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/general_description"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_gravity="center_vertical"
-        android:singleLine="false"
-        android:layout_margin="@dimen/standard_margin"
         style="?android:attr/editTextPreferenceStyle"
-        android:text="@string/manage_space_description"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="@dimen/standard_margin"
+        android:singleLine="false"
+        android:text="@string/manage_space_description" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/clearDataButton"
+        style="@style/Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/manage_space_clear_data"
-        android:id="@+id/clearDataButton"
         android:layout_gravity="center_horizontal"
         android:layout_margin="@dimen/standard_margin"
-        android:theme="@style/Button.Primary"
-        style="@style/Button.Primary"
-        android:contentDescription="@string/manage_space_clear_data"/>
+        android:contentDescription="@string/manage_space_clear_data"
+        android:text="@string/manage_space_clear_data"
+        android:theme="@style/Button.Primary" />
 
 </LinearLayout>
