--- a/owncloudApp/src/main/res/layout/rate_me_dialog.xml
+++ b/owncloudApp/src/main/res/layout/rate_me_dialog.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ownCloud Android client application
 
   Copyright (C) 2019 ownCloud GmbH.
