--- a/owncloudApp/src/main/res/layout/activity_shared_by_link.xml
+++ b/owncloudApp/src/main/res/layout/activity_shared_by_link.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
@@ -43,4 +43,4 @@
         android:layout_height="match_parent"
         android:layout_gravity="start" />
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
